--- a/clientTaxiCab/bin/AndroidManifest.xml
+++ b/clientTaxiCab/bin/AndroidManifest.xml
@@ -25,8 +25,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name="UpdateServerOnLocationChangeService"
-            	 android:exported="false"/>
+        <service android:name=".UpdateServerOnLocationChangeService"
+            	 android:exported="false"
+            	 android:enabled="true"/>
     </application>
     
 </manifest>
