--- a/clientTaxiCab/AndroidManifest.xml
+++ b/clientTaxiCab/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="14"
         android:targetSdkVersion="19" />
     
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />	
@@ -19,6 +19,7 @@
         <activity
             android:name="com.idan.clienttaxicab.ShowLocationActivity"
             android:label="@string/app_name" 
+            android:icon="@drawable/app_icon"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
